--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,7 @@
 deployment:
   staging:
     branch: master
-    heroku:
-      appname: tinysplash-staging
+    commands:
+      - git push -f git@heroku.com:tinysplash-staging.git $CIRCLE_SHA1:refs/heads/master
+      - heroku run rake db:migrate --app tinysplash-staging:
+        timeout: 400
